--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@
 					<div id="order" class="subscribe-inner text-center clearfix">
 						<h2>Get Instant Access</h2>
 						<h4 style="font-size:18px;color:#E4E4E4;">Click The Button Below To Get Instant Access To Everything</h4>
+						<a href="https://warriorplus.com/o2/buy/rwfq9d/gv2yyj/fs2cmb"><img src="https://warriorplus.com/o2/btn/fn100011001/rwfq9d/gv2yyj/414063"></a>
 					</div>
 				</div>
 			</div>
@@ -200,6 +201,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12">
+					<p class="footer-company-name"><script type="text/javascript" src="https://warriorplus.com/o2/disclaimer/rwfq9d" defer></script><div class="wplus_spdisclaimer"></div></p>
 					<p class="footer-company-name">All Rights Reserved. &copy; 2024 <a href="#">70 Christmas Recipes</a></p>
 				</div>
 			</div>
