--- a/index.html
+++ b/index.html
@@ -169,9 +169,9 @@
 <li>- <span style="font-weight:bold;color:#777;">Use it in your projects</span> or simply enjoy it for your personal celebrations.</li>
 </ul></p>
 								<p>For a limited time only, you’ll get access to everything, including: 70 Christmas Recipes and Full Unrestricted Use Rights...</p>
-								<a href="#order" class="hvr-radial-out button-theme">FOR JUST $17 ONLY!</a>
+								
 
-						<h2>Get Instant Access</h2>
+						<h2>Get Instant Access Now</h2>
 						<h4 style="font-size:18px;color:#444;">Click The Button Below To Get Instant Access To Everything</h4>
 						<a href="https://warriorplus.com/o2/buy/rwfq9d/gv2yyj/fs2cmb"><img src="https://warriorplus.com/o2/btn/fn100011000/rwfq9d/gv2yyj/414063"></a>
 				      
@@ -191,9 +191,7 @@
 			<div class="row">
 				<div class="col-lg-12">
 					<div id="order" class="subscribe-inner text-center clearfix">
-						<h2>Get Instant Access</h2>
-						<h4 style="font-size:18px;color:#E4E4E4;">Click The Button Below To Get Instant Access To Everything</h4>
-						<a href="https://warriorplus.com/o2/buy/rwfq9d/gv2yyj/fs2cmb"><img src="https://warriorplus.com/o2/btn/fn100011000/rwfq9d/gv2yyj/414063"></a>
+					<p class="footer-company-name"><script type="text/javascript" src="https://warriorplus.com/o2/disclaimer/rwfq9d" defer></script><div class="wplus_spdisclaimer"></div></p>
 					</div>
 				</div>
 			</div>
@@ -206,7 +204,6 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12">
-					<p class="footer-company-name"><script type="text/javascript" src="https://warriorplus.com/o2/disclaimer/rwfq9d" defer></script><div class="wplus_spdisclaimer"></div></p>
 					<p class="footer-company-name">All Rights Reserved. &copy; 2024 <a href="#">70 Christmas Recipes</a></p>
 				</div>
 			</div>
