--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 			<div class="row">
 				<div class="col-lg-12">
 					<div id="order" class="subscribe-inner text-center clearfix">
-					<p class="footer-company-name"><script type="text/javascript" src="https://warriorplus.com/o2/disclaimer/rwfq9d" defer></script><div class="wplus_spdisclaimer"></div></p>
+					<p><script type="text/javascript" src="https://warriorplus.com/o2/disclaimer/rwfq9d" defer></script><div class="wplus_spdisclaimer" style="color:#EEE;text-align:justify;width:90%;"></div></p>
 					</div>
 				</div>
 			</div>
