--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 <li>- Put your name as the <span style="font-weight:bold;color:#777;">Author</span> and profit from your work.</li>
 <li>- <span style="font-weight:bold;color:#777;">Use it in your projects</span> or simply enjoy it for your personal celebrations.</li>
 </ul></p>
-								<p>For a limited time only, you’ll get access to everything, including: 70 Christmas Recipes and Full Unrestricted Use Rights...</p>
+								<p>For a limited time only, you’ll get access to everything, including: <span  style="font-size:18px;color:#444;">70 Christmas Recipes and Full Unrestricted Use Rights...</span></p>
 								
 
 						<h2>Get Instant Access Now</h2>
@@ -191,7 +191,7 @@
 			<div class="row">
 				<div class="col-lg-12">
 					<div id="order" class="subscribe-inner text-center clearfix">
-					<p><script type="text/javascript" src="https://warriorplus.com/o2/disclaimer/rwfq9d" defer></script><div class="wplus_spdisclaimer" style="color:#EEE;text-align:justify;width:90%;"></div></p>
+					
 					</div>
 				</div>
 			</div>
@@ -204,6 +204,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12">
+					<p><script type="text/javascript" src="https://warriorplus.com/o2/disclaimer/rwfq9d" defer></script><div class="wplus_spdisclaimer" style="text-align:justify;width:90%;"></div></p>
 					<p class="footer-company-name">All Rights Reserved. &copy; 2024 <a href="#">70 Christmas Recipes</a></p>
 				</div>
 			</div>
