--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12">
-					<p><script type="text/javascript" src="https://warriorplus.com/o2/disclaimer/rwfq9d" defer></script><div class="wplus_spdisclaimer" style="text-align:justify;width:90%;"></div></p>
+					<center><p><script type="text/javascript" src="https://warriorplus.com/o2/disclaimer/rwfq9d" defer></script><div class="wplus_spdisclaimer" style="text-align:justify;width:90%;"></div></p></center>
 					<p class="footer-company-name">All Rights Reserved. &copy; 2024 <a href="#">70 Christmas Recipes</a></p>
 				</div>
 			</div>
