--- a/index.html
+++ b/index.html
@@ -168,10 +168,10 @@
 <li>- Put your name as the <span style="font-weight:bold;color:#777;">Author</span> and profit from your work.</li>
 <li>- <span style="font-weight:bold;color:#777;">Use it in your projects</span> or simply enjoy it for your personal celebrations.</li>
 </ul></p>
-								<p>For a limited time only, you’ll get access to everything, including: <span  style="font-size:18px;color:#444;">70 Christmas Recipes and Full Unrestricted Use Rights...</span></p>
+								<p id="order">For a limited time only, you’ll get access to everything, including: <span  style="font-size:18px;color:#444;">70 Christmas Recipes and Full Unrestricted Use Rights...</span></p>
 								
 
-						<h2 id="order">Get Instant Access Now</h2>
+						<h2>Get Instant Access Now</h2>
 						<h4 style="font-size:18px;color:#444;">Click The Button Below To Get Instant Access To Everything</h4>
 						<a href="https://warriorplus.com/o2/buy/rwfq9d/gv2yyj/fs2cmb"><img src="https://warriorplus.com/o2/btn/fn100011000/rwfq9d/gv2yyj/414063"></a>
 				      
