--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	<header class="top-header">
 		<nav class="navbar header-nav navbar-expand-lg">
             <div class="container">
-				<a class="navbar-brand" href="index.html"><img src="images/logos.png" alt="image"></a>
+				<a class="navbar-brand" href="https://xmasrecipes.github.io"><img src="images/logos.png" alt="image"></a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-wd" aria-controls="navbar-wd" aria-expanded="false" aria-label="Toggle navigation">
 					<span></span>
 					<span></span>
@@ -87,6 +87,7 @@
 					<div class="col-lg-12">
 						<div class="title-box">
 							<h2><div style="font-size: 32px;line-height:34px;color:#111;">Get Exclusive Instant Access to</div>70 Christmas Recipes</h2>
+<img src="images/70xmasrecipes.png" alt="image">
 						</div>
 					</div>
 				</div>
@@ -191,7 +192,7 @@
 			<div class="row">
 				<div class="col-lg-12">
 					<div class="subscribe-inner text-center clearfix">
-					
+					<img src="images/70xmasrecipes.png" alt="image">
 					</div>
 				</div>
 			</div>
