--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 					<div class="col-lg-12">
 						<div class="title-box">
 							<h2><div style="font-size: 32px;line-height:34px;color:#111;">Get Exclusive Instant Access to</div>70 Christmas Recipes</h2>
-<img src="images/70xmasrecipes.png" alt="image">
+<img src="images/70xmasrecipes.png" alt="70 Christmas Recipes" style="width:70%;">
 						</div>
 					</div>
 				</div>
@@ -192,7 +192,7 @@
 			<div class="row">
 				<div class="col-lg-12">
 					<div class="subscribe-inner text-center clearfix">
-					<img src="images/70xmasrecipes.png" alt="image">
+					<img src="images/70xmasrecipes.png" alt="70 Christmas Recipes" style="width:70%;">
 					</div>
 				</div>
 			</div>
