--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 					<div class="subscribe-inner text-center clearfix">
 					<img src="images/70xmasrecipes.png" alt="70 Christmas Recipes" style="width:110%;">
 					</div>
-<p style="color:#dedede;">
+<center><div style="text-align:justify;color:#dedede;width:90%;">
 <b>Appetizers</b>
 <ul>
 <li><span style="font-weight:bold;">- Tomato Basil Bruschetta</span> - Toasted bread topped with chopped tomatoes, garlic, and fresh basil.</li>
@@ -284,7 +284,7 @@
 <li><span style="font-weight:bold;">- Chocolate Mint Fudge</span> - Chocolate fudge with mint flavor.</li>
 <li><span style="font-weight:bold;">- Chocolate Ganache Cupcakes</span> - Cupcakes topped with chocolate ganache.</li>
 </ul>
-</p>
+</div></center>
 				</div>
 			</div>
 		</div>
