--- a/index.html
+++ b/index.html
@@ -185,16 +185,18 @@
 			</div>
 		</div> 
 
-	<!-- wish us -->
-	
-	<!-- Start Subscribe -->
-	<div class="subscribe-box">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-12">
-					<div class="subscribe-inner text-center clearfix">
-					<img src="images/70xmasrecipes.png" alt="70 Christmas Recipes" style="width:110%;">
+
+		<div id="wish" class="about-box" style="padding-bottom: 0;">
+		<div class="about-a1">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-12">
+						<div class="title-box">
+							<h2><div style="font-size: 32px;line-height:34px;color:#111;">Here's What You Can Do With</div>The 70 Christmas Recipes Cookbook!</h2>
+						</div>
 					</div>
+				</div>
+				<div class="row">
 <center><div style="text-align:justify;color:#dedede;width:90%;">
 <b>Appetizers</b>
 <ul>
@@ -285,6 +287,25 @@
 <li><span style="font-weight:bold;">- Chocolate Ganache Cupcakes</span> - Cupcakes topped with chocolate ganache.</li>
 </ul>
 </div></center>
+
+				</div>
+			</div>
+		</div>
+		</div>
+			
+
+
+	
+	<!-- wish us -->
+	
+	<!-- Start Subscribe -->
+	<div class="subscribe-box">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12">
+					<div class="subscribe-inner text-center clearfix">
+					<img src="images/70xmasrecipes.png" alt="70 Christmas Recipes" style="width:110%;">
+					</div>
 				</div>
 			</div>
 		</div>
