--- a/index.html
+++ b/index.html
@@ -169,13 +169,7 @@
 <li>- Put your name as the <span style="font-weight:bold;color:#777;">Author</span> and profit from your work.</li>
 <li>- <span style="font-weight:bold;color:#777;">Use it in your projects</span> or simply enjoy it for your personal celebrations.</li>
 </ul></p>
-								<p id="order">For a limited time only, you’ll get access to everything, including: <span  style="font-size:18px;color:#444;">70 Christmas Recipes and Full Unrestricted Use Rights...</span></p>
-
-				      
-
-						<h2>Get Instant Access Now</h2>
-						<h4 style="font-size:18px;color:#444;">Click The Button Below To Get Instant Access To Everything</h4>
-						<a href="https://warriorplus.com/o2/buy/rwfq9d/gv2yyj/fs2cmb"><img src="https://warriorplus.com/o2/btn/fn100011000/rwfq9d/gv2yyj/414063"></a>
+								<p>For a limited time only, you’ll get access to everything, including: <span  style="font-size:18px;color:#444;">70 Christmas Recipes and Full Unrestricted Use Rights...</span></p>
 				      
 							</div>
 
@@ -197,7 +191,7 @@
 					</div>
 				</div>
 				<div class="row">
-<center><div style="text-align:justify;color:#dedede;width:90%;">
+<center><div style="text-align:justify;color:#777;width:80%;">
 <b>Appetizers</b>
 <ul>
 <li><span style="font-weight:bold;">- Tomato Basil Bruschetta</span> - Toasted bread topped with chopped tomatoes, garlic, and fresh basil.</li>
@@ -287,6 +281,9 @@
 <li><span style="font-weight:bold;">- Chocolate Ganache Cupcakes</span> - Cupcakes topped with chocolate ganache.</li>
 </ul>
 </div></center>
+						<h2 id="order">Get Instant Access Now</h2>
+						<h4 style="font-size:18px;color:#444;">Click The Button Below To Get Instant Access To Everything</h4>
+						<a href="https://warriorplus.com/o2/buy/rwfq9d/gv2yyj/fs2cmb"><img src="https://warriorplus.com/o2/btn/fn100011000/rwfq9d/gv2yyj/414063"></a>
 
 				</div>
 			</div>
