--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 				<div class="row">
 					<div class="col-lg-12">
 						<div class="title-box">
-							<h2><div style="font-size: 32px;line-height:34px;color:#111;">Here's What You Can Do With</div>The 70 Christmas Recipes Cookbook!</h2>
+							<h2><div style="font-size: 32px;line-height:34px;color:#111;">Here's What Will You Get On</div>The 70 Christmas Recipes Cookbook!</h2>
 						</div>
 					</div>
 				</div>
