--- a/index.html
+++ b/index.html
@@ -189,9 +189,9 @@
 							<h2><div style="font-size: 32px;line-height:34px;color:#111;">Here's What Will You Get On</div>The 70 Christmas Recipes Cookbook!</h2>
 						</div>
 					</div>
-				</div>
-				<div class="row">
-<center><div style="text-align:justify;color:#777;width:100%;">
+
+
+<div style="text-align:justify;color:#777;width:100%;">
 <b>Appetizers</b>
 <ul>
 <li><span style="font-weight:bold;">- Tomato Basil Bruschetta</span> - Toasted bread topped with chopped tomatoes, garlic, and fresh basil.</li>
@@ -287,8 +287,10 @@
 						<h4 style="font-size:18px;color:#444;">Click The Button Below To Get Instant Access To Everything</h4>
 						<a href="https://warriorplus.com/o2/buy/rwfq9d/gv2yyj/fs2cmb"><img src="https://warriorplus.com/o2/btn/fn100011000/rwfq9d/gv2yyj/414063"></a>
 
-</center>
 
+
+
+					
 				</div>
 			</div>
 		</div>
