--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
 <li>- <span style="font-weight:bold;color:#777;">Use it in your projects</span> or simply enjoy it for your personal celebrations.</li>
 </ul></p>
 								<p>For a limited time only, you’ll get access to everything, including: <span  style="font-size:18px;color:#444;">70 Christmas Recipes and Full Unrestricted Use Rights...</span></p>
+								<p>remember, for just $17, you’ll get instant access to everything <span  style="font-size:18px;color:#444;"> and start making this holiday season the best one yet.</span></p>
 				      
 							</div>
 
@@ -192,7 +193,7 @@
 					<img src="images/70xmasrecipes.png" alt="70 Christmas Recipes" style="width:110%;">
 					<div id="order" style="line-height:48px;width:100%;"></div>
 						<h2>Get Instant Access Now</h2>
-						<h4 style="font-size:18px;color:#444;">Click The Button Below To Get Instant Access To Everything</h4>
+						<h4 style="font-size:18px;color:#eee;">Click The Button Below To Get Instant Access To Everything</h4>
 						<a href="https://warriorplus.com/o2/buy/rwfq9d/gv2yyj/fs2cmb"><img src="https://warriorplus.com/o2/btn/fn100011000/rwfq9d/gv2yyj/414063"></a>
 
 					</div>
