--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
 <li>- Put your name as the <span style="font-weight:bold;color:#777;">Author</span> and profit from your work.</li>
 <li>- <span style="font-weight:bold;color:#777;">Use it in your projects</span> or simply enjoy it for your personal celebrations.</li>
 </ul></p>
-								<p>For a limited time only, you’ll get access to everything, including: <span  style="font-size:18px;color:#444;">70 Christmas Recipes and Full Unrestricted Use Rights...</span></p>
-								<p>remember, for just $17, you’ll get instant access to everything <span  style="font-size:18px;color:#444;"> and start making this holiday season the best one yet.</span></p>
+								<p>For a limited time only, you’ll get access to everything, including: <span  style="font-weight:bold;color:#444;">70 Christmas Recipes and Full Unrestricted Use Rights...</span></p>
+								<p>Remember, for just $17, you’ll get instant access to everything <span  style="font-weight:bold;color:#444;"> and start making this holiday season the best one yet.</span></p>
 				      
 							</div>
 
