--- a/index.html
+++ b/index.html
@@ -171,7 +171,8 @@
 </ul></p>
 								<p>For a limited time only, you’ll get access to everything, including: <span  style="font-weight:bold;color:#444;">70 Christmas Recipes and Full Unrestricted Use Rights...</span></p>
 								<p>Remember, for just $17, you’ll get instant access to everything <span  style="font-weight:bold;color:#444;"> and start making this holiday season the best one yet.</span></p>
-				      
+				      								<a href="#order" class="hvr-radial-out button-theme">GET INSTANT ACCESS HERE</a>
+
 							</div>
 
 						</div>
@@ -192,7 +193,7 @@
 					<div class="subscribe-inner text-center clearfix">
 					<img src="images/70xmasrecipes.png" alt="70 Christmas Recipes" style="width:110%;">
 					<div id="order" style="line-height:48px;width:100%;"></div>
-						<h2>Get Instant Access Now</h2>
+						<h2>Get It Now</h2>
 						<h4 style="font-size:18px;color:#eee;">Click The Button Below To Get Instant Access To Everything</h4>
 						<a href="https://warriorplus.com/o2/buy/rwfq9d/gv2yyj/fs2cmb"><img src="https://warriorplus.com/o2/btn/fn100011000/rwfq9d/gv2yyj/414063"></a>
 
