--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 					<img src="images/70xmasrecipes.png" alt="70 Christmas Recipes" style="width:110%;">
 					<div id="order" style="line-height:48px;width:100%;"></div>
 						<h2>Download Now</h2>
-						<h4 style="font-size:18px;color:#eee;">Click The Button Below To Get Instant Access To Everything for $17 Only.</h4>
+						<h4 style="font-size:18px;font-weight:bold;color:#eee;">Click The Button Below To Get Instant Access To Everything for $17 Only!</h4>
 						<a href="https://warriorplus.com/o2/buy/rwfq9d/gv2yyj/fs2cmb"><img src="https://warriorplus.com/o2/btn/fn100011000/rwfq9d/gv2yyj/414063"></a>
 
 					</div>
