--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 				</button>
                 <div class="collapse navbar-collapse justify-content-end" id="navbar-wd">
                     <ul class="navbar-nav">
-                        <li><a class="nav-link active" href="#home">The Best 70 Christmas Recipes in 2024</a></li>
+                        <li><a class="nav-link active" href="#see">The Best 70 Christmas Recipes in 2024</a></li>
                     </ul>
                 </div>
             </div>
@@ -190,7 +190,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12">
-					<div class="subscribe-inner text-center clearfix">
+					<div class="subscribe-inner text-center clearfix" id="see">
 					<img id="order" src="images/70xmasrecipes.png" alt="70 Christmas Recipes" style="width:110%;">
 						<h2>Download Now</h2>
 						<h4 style="font-size:18px;font-weight:bold;color:#eee;">Click The Button Below To Get Instant Access To Everything for $17 Only!</h4>
