--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 			<div class="row">
 				<div class="col-lg-12">
 					<center><p><script type="text/javascript" src="https://warriorplus.com/o2/disclaimer/rwfq9d" defer></script><div class="wplus_spdisclaimer" style="text-align:justify;width:90%;"></div></p></center>
-					<p class="footer-company-name">All Rights Reserved. &copy; 2024 <a href="#">70 Christmas Recipes</a> | <a target="blank" href="https://github.com/xmasrecipes">Github</a> <a target="blank" href="https://medium.com/@christmasrecipes">Medium</a></p>
+					<p class="footer-company-name">All Rights Reserved. &copy; 2024 <a href="#">70 Christmas Recipes</a> | <a target="blank" rel="nofollow" href="https://warriorplus.com/xmasrecipes">WPlus</a> | <a rel="nofollow" target="blank" href="https://github.com/xmasrecipes">Github</a> | <a rel="nofollow" target="blank" href="https://medium.com/@christmasrecipes">Medium</a></p>
 				</div>
 			</div>
 		</div>
